Support self-signed for cgi